
file(GLOB_RECURSE platform_files "${CMAKE_CURRENT_SOURCE_DIR}/*.c" "${CMAKE_CURRENT_SOURCE_DIR}/*.h")
file(GLOB_RECURSE pdclib_files "${CMAKE_CURRENT_SOURCE_DIR}/../pdclib/functions/*.c" "${CMAKE_CURRENT_SOURCE_DIR}/../pdclib/include/*.h")

# define the target build
ADD_LIBRARY(pdclib STATIC ${pdclib_files} ${platform_files})

TARGET_COMPILE_DEFINITIONS(pdclib PUBLIC _PDCLIB_STATIC_DEFINE)
TARGET_COMPILE_DEFINITIONS(pdclib PUBLIC LACKS_SYS_TYPES_H LACKS_SYS_MMAN_H LACKS_FCNTL_H LACKS_UNISTD_H LACKS_SCHED_H LACKS_SYS_PARAM_H LACKS_ERRNO_H)
TARGET_INCLUDE_DIRECTORIES(pdclib SYSTEM PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include/pdclib" "${CMAKE_CURRENT_SOURCE_DIR}/include" "${CMAKE_CURRENT_SOURCE_DIR}/../pdclib/include")

